--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,18 +16,12 @@ itertools = ">=0.7"
 byteorder = "*"
 num = "0.2"
 lazy_static = "1.4"
+log = "0.4.*"
+boomphf = { git = "https://github.com/wwood/rust-boomphf", rev = "4569ed4857356b88171ffee3c24424bfb48fdbc8", features = ["serde"] }
 
 [dev-dependencies]
 pretty_assertions = "0.5"
 
-[dependencies.boomphf]
-version = "0.5"
-features = ["serde"]
-
 [dependencies.concurrent-hashmap]
 version = "0.2.1"
 default-features = false
-
-[dependencies.log]
-version = "0.4"
-features = ["release_max_level_info"]
